cdk.out/emq-full-stack.template.json
{
  "Resources": {
    "VPCEMQCEBDB0FA": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/Resource"
      }
    },
    "VPCEMQPublicSubnet1SubnetE79D6ABB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet1/Subnet"
      }
    },
    "VPCEMQPublicSubnet1RouteTable42974624": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet1/RouteTable"
      }
    },
    "VPCEMQPublicSubnet1RouteTableAssociation4B3DE219": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet1RouteTable42974624"
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet1/RouteTableAssociation"
      }
    },
    "VPCEMQPublicSubnet1DefaultRouteB269FEA2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet1RouteTable42974624"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCEMQIGW85DEFD8D"
        }
      },
      "DependsOn": [
        "VPCEMQVPCGWEDF5EF6D"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet1/DefaultRoute"
      }
    },
    "VPCEMQPublicSubnet1EIP5992D97C": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet1/EIP"
      }
    },
    "VPCEMQPublicSubnet1NATGateway07CD69C9": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCEMQPublicSubnet1EIP5992D97C",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet1/NATGateway"
      }
    },
    "VPCEMQPublicSubnet2Subnet31783A68": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.1.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet2/Subnet"
      }
    },
    "VPCEMQPublicSubnet2RouteTableD6551098": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet2/RouteTable"
      }
    },
    "VPCEMQPublicSubnet2RouteTableAssociation3760BBE8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet2RouteTableD6551098"
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet2Subnet31783A68"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet2/RouteTableAssociation"
      }
    },
    "VPCEMQPublicSubnet2DefaultRouteA58CE379": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet2RouteTableD6551098"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCEMQIGW85DEFD8D"
        }
      },
      "DependsOn": [
        "VPCEMQVPCGWEDF5EF6D"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet2/DefaultRoute"
      }
    },
    "VPCEMQPublicSubnet2EIP8BAD0FC5": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet2/EIP"
      }
    },
    "VPCEMQPublicSubnet2NATGateway273FE59B": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCEMQPublicSubnet2EIP8BAD0FC5",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet2Subnet31783A68"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PublicSubnet2/NATGateway"
      }
    },
    "VPCEMQPrivateSubnet1Subnet25FF7A57": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.2.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet1/Subnet"
      }
    },
    "VPCEMQPrivateSubnet1RouteTable776D64D5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet1/RouteTable"
      }
    },
    "VPCEMQPrivateSubnet1RouteTableAssociation343CA3CC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet1RouteTable776D64D5"
        },
        "SubnetId": {
          "Ref": "VPCEMQPrivateSubnet1Subnet25FF7A57"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "VPCEMQPrivateSubnet1DefaultRouteB6C12D16": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet1RouteTable776D64D5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCEMQPublicSubnet1NATGateway07CD69C9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet1/DefaultRoute"
      }
    },
    "VPCEMQPrivateSubnet2Subnet265B9CEA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.3.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet2/Subnet"
      }
    },
    "VPCEMQPrivateSubnet2RouteTable4E486EA4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet2/RouteTable"
      }
    },
    "VPCEMQPrivateSubnet2RouteTableAssociationC9C0DD64": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet2RouteTable4E486EA4"
        },
        "SubnetId": {
          "Ref": "VPCEMQPrivateSubnet2Subnet265B9CEA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "VPCEMQPrivateSubnet2DefaultRoute0A4B43DC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet2RouteTable4E486EA4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCEMQPublicSubnet2NATGateway273FE59B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/PrivateSubnet2/DefaultRoute"
      }
    },
    "VPCEMQDBSubnet1Subnet991720EA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.4.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "DB"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/DBSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/DBSubnet1/Subnet"
      }
    },
    "VPCEMQDBSubnet1RouteTableBCEB892A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/DBSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/DBSubnet1/RouteTable"
      }
    },
    "VPCEMQDBSubnet1RouteTableAssociationD65FB38D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQDBSubnet1RouteTableBCEB892A"
        },
        "SubnetId": {
          "Ref": "VPCEMQDBSubnet1Subnet991720EA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/DBSubnet1/RouteTableAssociation"
      }
    },
    "VPCEMQDBSubnet2SubnetEBD94896": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.5.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "DB"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/DBSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/DBSubnet2/Subnet"
      }
    },
    "VPCEMQDBSubnet2RouteTableB80E09D0": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ/DBSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/DBSubnet2/RouteTable"
      }
    },
    "VPCEMQDBSubnet2RouteTableAssociation12241E81": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQDBSubnet2RouteTableB80E09D0"
        },
        "SubnetId": {
          "Ref": "VPCEMQDBSubnet2SubnetEBD94896"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/DBSubnet2/RouteTableAssociation"
      }
    },
    "VPCEMQIGW85DEFD8D": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/VPC_EMQ"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/IGW"
      }
    },
    "VPCEMQVPCGWEDF5EF6D": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "InternetGatewayId": {
          "Ref": "VPCEMQIGW85DEFD8D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/VPC_EMQ/VPCGW"
      }
    },
    "BastionInstanceSecurityGroup71C3847E": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "emq-full-stack/Bastion/Resource/InstanceSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Internet access SSH",
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "BastionHostLinux"
          }
        ],
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/Bastion/Resource/InstanceSecurityGroup/Resource"
      }
    },
    "BastionInstanceRoleD3B36EDD": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BastionHostLinux"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/Bastion/Resource/InstanceRole/Resource"
      }
    },
    "BastionInstanceRoleDefaultPolicy457C3156": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "ssmmessages:*",
                "ssm:UpdateInstanceInformation",
                "ec2messages:*"
              ],
              "Effect": "Allow",
              "Resource": "*"
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "BastionInstanceRoleDefaultPolicy457C3156",
        "Roles": [
          {
            "Ref": "BastionInstanceRoleD3B36EDD"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/Bastion/Resource/InstanceRole/DefaultPolicy/Resource"
      }
    },
    "BastionInstanceProfile8FFAF242": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "BastionInstanceRoleD3B36EDD"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/Bastion/Resource/InstanceProfile"
      }
    },
    "Bastion6045F255": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": "eu-west-1a",
        "IamInstanceProfile": {
          "Ref": "BastionInstanceProfile8FFAF242"
        },
        "ImageId": {
          "Ref": "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter"
        },
        "InstanceType": "t2.micro",
        "KeyName": {
          "Ref": "sshkey"
        },
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "BastionInstanceSecurityGroup71C3847E",
              "GroupId"
            ]
          }
        ],
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "BastionHostLinux"
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash"
        }
      },
      "DependsOn": [
        "BastionInstanceRoleDefaultPolicy457C3156",
        "BastionInstanceRoleD3B36EDD"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/Bastion/Resource/Resource"
      }
    },
    "emqelbCCC51E63": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "LoadBalancerAttributes": [
          {
            "Key": "deletion_protection.enabled",
            "Value": "false"
          },
          {
            "Key": "load_balancing.cross_zone.enabled",
            "Value": "true"
          }
        ],
        "Name": "emq-nlb",
        "Scheme": "internet-facing",
        "Subnets": [
          {
            "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
          },
          {
            "Ref": "VPCEMQPublicSubnet2Subnet31783A68"
          }
        ],
        "Type": "network"
      },
      "DependsOn": [
        "VPCEMQPublicSubnet1DefaultRouteB269FEA2",
        "VPCEMQPublicSubnet2DefaultRouteA58CE379"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-elb/Resource"
      }
    },
    "emqelbport188371CB779D": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "emqelbport1883addTargetGroupGroupBA5E419A"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "emqelbCCC51E63"
        },
        "Port": 1883,
        "Protocol": "TCP"
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-elb/port1883/Resource"
      }
    },
    "emqelbport1883addTargetGroupGroupBA5E419A": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 1883,
        "Protocol": "TCP",
        "TargetType": "instance",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-elb/port1883/addTargetGroupGroup/Resource"
      }
    },
    "emqasgInstanceSecurityGroup2D09F51D": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "emq-full-stack/emq-asg/InstanceSecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow NLB access 1883 port of EC2 in Autoscaling Group",
            "FromPort": 1883,
            "IpProtocol": "tcp",
            "ToPort": 1883
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/emq-asg"
          }
        ],
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-asg/InstanceSecurityGroup/Resource"
      }
    },
    "emqasgInstanceSecurityGroupfromemqfullstackBastionInstanceSecurityGroupCFDB19AC221634F2CF": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Allow SSH from the bastion only",
        "FromPort": 22,
        "GroupId": {
          "Fn::GetAtt": [
            "emqasgInstanceSecurityGroup2D09F51D",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "BastionInstanceSecurityGroup71C3847E",
            "GroupId"
          ]
        },
        "ToPort": 22
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-asg/InstanceSecurityGroup/from emqfullstackBastionInstanceSecurityGroupCFDB19AC:22"
      }
    },
    "emqasgInstanceRoleAD038A20": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ec2.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-full-stack/emq-asg"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-asg/InstanceRole/Resource"
      }
    },
    "emqasgInstanceProfileB7BABE6C": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Roles": [
          {
            "Ref": "emqasgInstanceRoleAD038A20"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-asg/InstanceProfile"
      }
    },
    "emqasgLaunchConfig824C6AC5": {
      "Type": "AWS::AutoScaling::LaunchConfiguration",
      "Properties": {
        "ImageId": "ami-0abda0ec1e1bdedc9",
        "InstanceType": {
          "Ref": "ec2instancetype"
        },
        "IamInstanceProfile": {
          "Ref": "emqasgInstanceProfileB7BABE6C"
        },
        "KeyName": {
          "Ref": "sshkey"
        },
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "emqasgInstanceSecurityGroup2D09F51D",
              "GroupId"
            ]
          }
        ],
        "UserData": {
          "Fn::Base64": "#!/bin/bash"
        }
      },
      "DependsOn": [
        "emqasgInstanceRoleAD038A20"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-asg/LaunchConfig"
      }
    },
    "emqasgASGB361E6DF": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "MaxSize": "4",
        "MinSize": "2",
        "DesiredCapacity": "2",
        "HealthCheckGracePeriod": 60,
        "HealthCheckType": "ELB",
        "LaunchConfigurationName": {
          "Ref": "emqasgLaunchConfig824C6AC5"
        },
        "Tags": [
          {
            "Key": "Name",
            "PropagateAtLaunch": true,
            "Value": "emq-full-stack/emq-asg"
          }
        ],
        "TargetGroupARNs": [
          {
            "Ref": "emqelbport1883addTargetGroupGroupBA5E419A"
          }
        ],
        "VPCZoneIdentifier": [
          {
            "Ref": "VPCEMQPrivateSubnet1Subnet25FF7A57"
          },
          {
            "Ref": "VPCEMQPrivateSubnet2Subnet265B9CEA"
          }
        ]
      },
      "UpdatePolicy": {
        "AutoScalingScheduledAction": {
          "IgnoreUnmodifiedGroupSizeProperties": true
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/emq-asg/ASG"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAAA11Ry27CMBD8lt6N6eOAuBVQRSMhaiWI+2KW4JLYyF5DUZR/r52QpOXkmdnRenb3hU8n/PnpHa5uJPencSWNRV5lBPLEUnTGW4lscdACLJRIaCP58nT2xBZGO7JeUtQ6c81irwrlK6+2ZxlLW7Fgwu8KJTO/09jYB5QaT7iBXYGDPmgz54xUQMro3hzBRyLiswZaAuEVbkxYdQlwaJzoEDfgztAmubMZhRGPJWpic3Cx/adxtFLa/7AkjAU6zJ2h9FbRbWmNPzfpHoXe+lhMdG7RuZopKHmVmna65hUmbKKJM6Cuj7DmoIqwRCxiKlkY2O+gCCWl80tY6RrpauxpFfR5o7cX+cc7j3KE+l7v8L22AZuHzXRj/KHhfp6Mk1CEH3k1CyRrSe9egdfyGK5/ULm3/W0erXVdM3Gjo9HjNz7h06dvp9TIek2qRJ627y9F+llng [...]
      },
      "Metadata": {
        "aws:cdk:path": "emq-full-stack/CDKMetadata/Default"
      }
    }
  },
  "Parameters": {
    "ec2instancetype": {
      "Type": "String",
      "Default": "t2.micro",
      "Description": "Specify the instance type you want"
    },
    "sshkey": {
      "Type": "String",
      "Default": "key_ireland",
      "Description": "Specify your SSH key"
    },
    "SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter": {
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>",
      "Default": "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
    }
  },
  "Outputs": {
    "BastionBastionHostId8F8CEB82": {
      "Description": "Instance ID of the bastion host. Use this to connect via SSM Session Manager",
      "Value": {
        "Ref": "Bastion6045F255"
      }
    },
    "Output": {
      "Value": {
        "Fn::GetAtt": [
          "emqelbCCC51E63",
          "DNSName"
        ]
      }
    }
  }
}
