cdk.out/emq-vpc.template.json
{
  "Resources": {
    "VPCEMQCEBDB0FA": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.10.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/Resource"
      }
    },
    "VPCEMQPublicSubnet1SubnetE79D6ABB": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.0.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet1/Subnet"
      }
    },
    "VPCEMQPublicSubnet1RouteTable42974624": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet1/RouteTable"
      }
    },
    "VPCEMQPublicSubnet1RouteTableAssociation4B3DE219": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet1RouteTable42974624"
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet1/RouteTableAssociation"
      }
    },
    "VPCEMQPublicSubnet1DefaultRouteB269FEA2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet1RouteTable42974624"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCEMQIGW85DEFD8D"
        }
      },
      "DependsOn": [
        "VPCEMQVPCGWEDF5EF6D"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet1/DefaultRoute"
      }
    },
    "VPCEMQPublicSubnet1EIP5992D97C": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet1/EIP"
      }
    },
    "VPCEMQPublicSubnet1NATGateway07CD69C9": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCEMQPublicSubnet1EIP5992D97C",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet1/NATGateway"
      }
    },
    "VPCEMQPublicSubnet2Subnet31783A68": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.1.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet2/Subnet"
      }
    },
    "VPCEMQPublicSubnet2RouteTableD6551098": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet2/RouteTable"
      }
    },
    "VPCEMQPublicSubnet2RouteTableAssociation3760BBE8": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet2RouteTableD6551098"
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet2Subnet31783A68"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet2/RouteTableAssociation"
      }
    },
    "VPCEMQPublicSubnet2DefaultRouteA58CE379": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPublicSubnet2RouteTableD6551098"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VPCEMQIGW85DEFD8D"
        }
      },
      "DependsOn": [
        "VPCEMQVPCGWEDF5EF6D"
      ],
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet2/DefaultRoute"
      }
    },
    "VPCEMQPublicSubnet2EIP8BAD0FC5": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet2/EIP"
      }
    },
    "VPCEMQPublicSubnet2NATGateway273FE59B": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VPCEMQPublicSubnet2EIP8BAD0FC5",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VPCEMQPublicSubnet2Subnet31783A68"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PublicSubnet2/NATGateway"
      }
    },
    "VPCEMQPrivateSubnet1Subnet25FF7A57": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.2.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet1/Subnet"
      }
    },
    "VPCEMQPrivateSubnet1RouteTable776D64D5": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet1/RouteTable"
      }
    },
    "VPCEMQPrivateSubnet1RouteTableAssociation343CA3CC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet1RouteTable776D64D5"
        },
        "SubnetId": {
          "Ref": "VPCEMQPrivateSubnet1Subnet25FF7A57"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "VPCEMQPrivateSubnet1DefaultRouteB6C12D16": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet1RouteTable776D64D5"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCEMQPublicSubnet1NATGateway07CD69C9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet1/DefaultRoute"
      }
    },
    "VPCEMQPrivateSubnet2Subnet265B9CEA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.3.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet2/Subnet"
      }
    },
    "VPCEMQPrivateSubnet2RouteTable4E486EA4": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet2/RouteTable"
      }
    },
    "VPCEMQPrivateSubnet2RouteTableAssociationC9C0DD64": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet2RouteTable4E486EA4"
        },
        "SubnetId": {
          "Ref": "VPCEMQPrivateSubnet2Subnet265B9CEA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "VPCEMQPrivateSubnet2DefaultRoute0A4B43DC": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQPrivateSubnet2RouteTable4E486EA4"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VPCEMQPublicSubnet2NATGateway273FE59B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/PrivateSubnet2/DefaultRoute"
      }
    },
    "VPCEMQDBSubnet1Subnet991720EA": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.4.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1a",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "DB"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/DBSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/DBSubnet1/Subnet"
      }
    },
    "VPCEMQDBSubnet1RouteTableBCEB892A": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/DBSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/DBSubnet1/RouteTable"
      }
    },
    "VPCEMQDBSubnet1RouteTableAssociationD65FB38D": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQDBSubnet1RouteTableBCEB892A"
        },
        "SubnetId": {
          "Ref": "VPCEMQDBSubnet1Subnet991720EA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/DBSubnet1/RouteTableAssociation"
      }
    },
    "VPCEMQDBSubnet2SubnetEBD94896": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.10.5.0/24",
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "AvailabilityZone": "eu-west-1b",
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "DB"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Isolated"
          },
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/DBSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/DBSubnet2/Subnet"
      }
    },
    "VPCEMQDBSubnet2RouteTableB80E09D0": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ/DBSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/DBSubnet2/RouteTable"
      }
    },
    "VPCEMQDBSubnet2RouteTableAssociation12241E81": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VPCEMQDBSubnet2RouteTableB80E09D0"
        },
        "SubnetId": {
          "Ref": "VPCEMQDBSubnet2SubnetEBD94896"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/DBSubnet2/RouteTableAssociation"
      }
    },
    "VPCEMQIGW85DEFD8D": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "emq-vpc/VPC_EMQ"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/IGW"
      }
    },
    "VPCEMQVPCGWEDF5EF6D": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPCEMQCEBDB0FA"
        },
        "InternetGatewayId": {
          "Ref": "VPCEMQIGW85DEFD8D"
        }
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/VPC_EMQ/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAAA0WPTw+CMAzFPwv3Mf8diDcJMcaLLmi8j1rDBDeydRpD+O4yETn11/dem3bB1wmfRxv5cjFcq1kLxiJvTyShYjk64y0gy2766KnxxDKjHVkPFLTR71gYR1jy9tJAcC4iY8IXtYKTLzR+0xPlxhOeZVHjpE9a6pwBJUkZ/Q8H2O5FKAdJO0n4km8mrHr2OC3ea0Lb8xgYLvl1KfVPlQ/U1HVMvKk0erbiCV9Hd6dUbL0m9UCeD/UDzn+onBkBAAA="
      },
      "Metadata": {
        "aws:cdk:path": "emq-vpc/CDKMetadata/Default"
      }
    }
  },
  "Outputs": {
    "Output": {
      "Value": {
        "Ref": "VPCEMQCEBDB0FA"
      }
    },
    "ExportsOutputRefVPCEMQCEBDB0FA837D856C": {
      "Value": {
        "Ref": "VPCEMQCEBDB0FA"
      },
      "Export": {
        "Name": "emq-vpc:ExportsOutputRefVPCEMQCEBDB0FA837D856C"
      }
    },
    "ExportsOutputRefVPCEMQPublicSubnet1SubnetE79D6ABB31F0EBCE": {
      "Value": {
        "Ref": "VPCEMQPublicSubnet1SubnetE79D6ABB"
      },
      "Export": {
        "Name": "emq-vpc:ExportsOutputRefVPCEMQPublicSubnet1SubnetE79D6ABB31F0EBCE"
      }
    },
    "ExportsOutputRefVPCEMQPublicSubnet2Subnet31783A68123139C5": {
      "Value": {
        "Ref": "VPCEMQPublicSubnet2Subnet31783A68"
      },
      "Export": {
        "Name": "emq-vpc:ExportsOutputRefVPCEMQPublicSubnet2Subnet31783A68123139C5"
      }
    },
    "ExportsOutputRefVPCEMQPrivateSubnet1Subnet25FF7A5786E8FBC1": {
      "Value": {
        "Ref": "VPCEMQPrivateSubnet1Subnet25FF7A57"
      },
      "Export": {
        "Name": "emq-vpc:ExportsOutputRefVPCEMQPrivateSubnet1Subnet25FF7A5786E8FBC1"
      }
    },
    "ExportsOutputRefVPCEMQPrivateSubnet2Subnet265B9CEACAAB93FF": {
      "Value": {
        "Ref": "VPCEMQPrivateSubnet2Subnet265B9CEA"
      },
      "Export": {
        "Name": "emq-vpc:ExportsOutputRefVPCEMQPrivateSubnet2Subnet265B9CEACAAB93FF"
      }
    }
  }
}
